# Wikitude

./: build.gradle  local.properties
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wikitude/samples/: MainActivity.java  WikitudeSDKConstants.java
app/src/main/java/com/wikitude/samples/camera/: CameraSettingsActivity.java
app/src/main/java/com/wikitude/samples/plugins/: BarcodePluginActivity.java  Camera.java  CameraCallback.java  CustomCameraPluginActivity.java  FaceDetectionPluginActivity.java  FrameInputPluginModule.java  SimpleInputPluginActivity.java  WikitudeCamera.java  WikitudeCamera2.java
app/src/main/java/com/wikitude/samples/rendering/internal/: CustomRenderExtension.java  InternalRenderingActivity.java
app/src/main/java/com/wikitude/samples/tracking/cloud/: ContinuousCloudRecognitionActivity.java  SingleCloudRecognitionActivity.java
app/src/main/java/com/wikitude/samples/tracking/image/: ExtendedImageTrackingActivity.java  MultipleTargetsImageTrackingActivity.java  SimpleImageTrackingActivity.java
app/src/main/java/com/wikitude/samples/tracking/instant/: InstantScenePickingActivity.java  InstantTrackingActivity.java  LoadInstantTargetActivity.java  PlaneDetectionActivity.java  SaveInstantTargetActivity.java
app/src/main/java/com/wikitude/samples/tracking/object/: ExtendedObjectTrackingActivity.java  ObjectTrackingActivity.java
app/src/main/java/com/wikitude/samples/util/: DropDownAlert.java  SampleCategory.java  SampleData.java  Vector3f.java
app/src/main/java/com/wikitude/samples/util/adapter/: SamplesExpendableListAdapter.java
app/src/main/res/layout/: activity_continuous_cloud_tracking.xml  activity_on_click_cloud_tracking.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
plugins/: build.gradle
plugins/src/main/cpp/: CMakeLists.txt
plugins/src/main/cpp/src/: FrameInputPluginModule.cpp  JniRegistration.cpp
plugins/src/main/cpp/src/barcode/: BarcodePlugin.cpp  BarcodePlugin.h
plugins/src/main/cpp/src/custom_camera/: YUVFrameInputPlugin.h
plugins/src/main/cpp/src/face_detection/: FaceDetectionPlugin.cpp  FaceDetectionPlugin.h
plugins/src/main/cpp/src/simple_input_plugin/: SimpleInputPlugin.cpp  SimpleInputPlugin.h
